# mac-messages-mcp-jrr

./: .dockerignore  .gitignore  .mcpbignore  CHANGELOG.md  Dockerfile  JRR-FORK.md  README.md  VERSIONING.md  glama.json  manifest.json  pyproject.toml
.github/workflows/: publish.yml
mac_messages_mcp/: __init__.py  delivery.py  messages.py  server.py
scripts/: build_mcpb.py  bump_version.py
tests/: test_attachments.py  test_delivery.py  test_fuzzy_search.py  test_integration.py  test_messages.py  test_timestamp_helpers.py
