[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mac-messages-mcp"
version = "0.9.1"
description = "A bridge for interacting with macOS Messages app through MCP"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Carter Lasalle", email = "carterlasalle@gmail.com"}
]
keywords = ["macos", "messages", "imessage", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "mcp[cli]>=1.2.0,<2.0.0", # For FastMCP functionality with CLI support
    "thefuzz>=0.20.0",
    "python-Levenshtein>=0.23.0", # Optional but recommended for performance
    "pillow>=10.0.0", # Image format handling for tool_get_attachment
    "pillow-heif>=0.13.0", # HEIC support so iPhone photos can be returned inline
]

[project.urls]
"Homepage" = "https://github.com/carterlasalle/mac_messages_mcp"
"Bug Tracker" = "https://github.com/carterlasalle/mac_messages_mcp/issues"
"Source" = "https://github.com/carterlasalle/mac_messages_mcp"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
]

# Define both entry points to ensure it works with either name
[project.scripts]
mac-messages-mcp = "mac_messages_mcp.server:run_server"
mac_messages_mcp = "mac_messages_mcp.server:run_server"

[tool.setuptools]
packages = ["mac_messages_mcp"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
